--- a/hw3/svd_nofilter.ipynb
+++ b/hw3/svd_nofilter.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1197681\n",
+      "1497145\n",
       "[(('united', 'states'), 401), (('states', 'united'), 401), (('af', 'af'), 392), (('new', 'york'), 312), (('york', 'new'), 312)]\n"
      ]
     }
@@ -208,14 +208,13 @@
     "joint = Counter()\n",
     "for isen in sentence:\n",
     "    for j, word in enumerate(isen):\n",
-    "        if word not in word_counts2:\n",
+    "        if word not in word_counts:\n",
     "            continue\n",
     "        index_min = max(0, j-iwin)\n",
     "        index_max = min(len(isen), j+iwin+1)\n",
     "        index = [ii for ii in range(index_min, index_max) if ii!=j]\n",
     "        for iin in index:\n",
-    "            if isen[iin] in word_counts2:\n",
-    "                joint[(word, isen[iin])] += 1\n",
+    "            joint[(word, isen[iin])] += 1\n",
     "print(len(joint))\n",
     "print(joint.most_common(5))"
    ]
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +249,7 @@
     "index_dict = dict()\n",
     "word_dict = dict()\n",
     "ii = 0\n",
-    "for i in word_counts2:\n",
+    "for i in word_counts:\n",
     "    index_dict[i] = ii\n",
     "    word_dict[ii] = i\n",
     "    ii += 1\n",
@@ -263,7 +262,7 @@
     "for (wi,wj), count in joint.items():\n",
     "    row = index_dict[wi]\n",
     "    col = index_dict[wj]\n",
-    "    prod = word_counts2[wi]*word_counts2[wj]*len(joint)/(len(word_counts2)**2)\n",
+    "    prod = word_counts[wi]*word_counts[wj]*len(joint)/(len(word_counts)**2)\n",
     "    if count > prod:\n",
     "        value = math.log(count/prod)\n",
     "    else:\n",
@@ -278,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([    0,     0,     7, ..., 13886, 13888, 13890], dtype=int32),\n",
-       " array([  241,   246,  3591, ..., 13885, 12761, 10634], dtype=int32))"
+       "(array([    0,     0,     0, ..., 42279, 42280, 42280], dtype=int32),\n",
+       " array([    1,     2,     3, ..., 42280,  6523, 42279], dtype=int32))"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,10 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "def ww_sim(word, mat, topn=10):\n",
     "    indx = index_dict[word]\n",
     "    if isinstance(mat, sparse.csr_matrix):\n",
@@ -320,25 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('uncle', 1.0),\n",
-       " ('pump', 0.6556179289796744),\n",
-       " ('joel', 0.5944489410125583),\n",
-       " ('chuckled', 0.4543603147900393),\n",
-       " ('proudly', 0.34355454293437226),\n",
-       " ('fulton', 0.0),\n",
-       " ('dresses', 0.0),\n",
-       " ('shifts', 0.0),\n",
-       " ('continuum', 0.0),\n",
-       " ('superbly', 0.0)]"
+       " ('replanted', 0.19015442139538086),\n",
+       " ('ffortescue', 0.18770341268912027),\n",
+       " ('winnings', 0.1635886263178493),\n",
+       " ('lorde', 0.14375627841760283),\n",
+       " ('countrey', 0.14093206890510743),\n",
+       " ('tussle', 0.13681876061169834),\n",
+       " ('donald', 0.12825493146537434),\n",
+       " ('underlay', 0.12695794690543205),\n",
+       " ('stowe', 0.12417572821154328)]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13891, 100) (100,) (100, 13891)\n"
+      "(42281, 100) (100,) (100, 42281)\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -393,25 +393,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('female', 0.9999999999999994),\n",
-       " ('psithyrus', 0.9995610981153056),\n",
-       " ('transports', 0.9856031460312757),\n",
-       " ('pollen', 0.9849446192789209),\n",
-       " ('procurement', 0.9838721314092996),\n",
-       " ('kills', 0.9687023620683832),\n",
-       " ('soul', 0.935564528841466),\n",
-       " ('lacks', 0.9338772281824219),\n",
-       " ('endless', 0.9277229590486692),\n",
-       " ('affectionate', 0.9163717452836537)]"
+       "[('female', 1.0000000000000004),\n",
+       " ('choosy', 0.9837187516554718),\n",
+       " ('parasite', 0.9767523687490764),\n",
+       " ('matriarchal', 0.9579497486448949),\n",
+       " ('amazons', 0.8838188316210213),\n",
+       " ('dissenters', 0.8662304672042447),\n",
+       " ('criticizing', 0.8620292444505535),\n",
+       " ('colombian', 0.8430180909941202),\n",
+       " ('merciless', 0.8284281431464853),\n",
+       " ('factions', 0.8258929852339392)]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,17 +422,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('strike', 0.9999999999999998),\n",
+       " ('soldiers', 0.804110429821317),\n",
+       " ('unenthusiastic', 0.7801367386647553),\n",
+       " ('gesturing', 0.7547880528517577),\n",
+       " ('upraised', 0.7517724899072793),\n",
+       " ('pressed', 0.7488827586046398),\n",
+       " ('spruced', 0.7431111912300254),\n",
+       " ('drifted', 0.7415945161082629),\n",
+       " ('warmish', 0.7354715342614404),\n",
+       " ('foul', 0.7351051738108774)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ww_sim(\"strike\",word_vecs)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('uncle', 1.0000000000000002),\n",
+       " ('indisposition', 0.9978157634359457),\n",
+       " ('doin', 0.9697134515392729),\n",
+       " ('countrey', 0.9446329677743157),\n",
+       " ('vinnicum', 0.943740872841573),\n",
+       " ('conspires', 0.939735520007934),\n",
+       " ('indisposed', 0.9332111812406453),\n",
+       " ('ffortescue', 0.9292737667590284),\n",
+       " ('exchequer', 0.9240052795821159),\n",
+       " ('hush', 0.9179795742322708)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ww_sim(\"uncle\",word_vecs)"
+   ]
   },
   {
    "cell_type": "code",
