--- a/hw3/svd_nofilter_noregex.ipynb
+++ b/hw3/svd_nofilter_noregex.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,49 +52,6 @@
     "EPOCHS = 5\n",
     "iwin = 2\n",
     "idim = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to /Users/mac/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
-    "from nltk.corpus import stopwords\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "tokenizer = RegexpTokenizer(r'\\w+')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "179"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(stop_words)"
    ]
   },
   {
@@ -109,7 +66,7 @@
     " \n",
     "    def __iter__(self):\n",
     "        for line in open(self.filename, 'r'):\n",
-    "            yield [word.lower() for word in tokenizer.tokenize(line) if word.lower() not in stop_words]\n",
+    "            yield [word.lower() for word in line.split()]\n",
     "sentence = MySentences(text)"
    ]
   },
@@ -128,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42281\n",
-      "[('one', 3504), ('would', 2719), ('said', 1961), ('time', 1695), ('new', 1646)]\n",
-      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n"
+      "49815\n",
+      "[('the', 69971), (',', 58334), ('.', 49346), ('of', 36412), ('and', 28853)]\n",
+      "[('aviary', 1), ('olive-flushed', 1), ('coral-colored', 1), ('boucle', 1), ('stupefying', 1)]\n"
      ]
     }
    ],
@@ -191,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1197681\n",
-      "[(('united', 'states'), 401), (('states', 'united'), 401), (('af', 'af'), 392), (('new', 'york'), 312), (('york', 'new'), 312)]\n"
+      "1504865\n",
+      "[(('of', 'the'), 20851), (('the', 'of'), 20851), (('the', ','), 11580), ((',', 'the'), 11580), ((',', 'and'), 9296)]\n"
      ]
     }
    ],
@@ -208,14 +165,14 @@
     "joint = Counter()\n",
     "for isen in sentence:\n",
     "    for j, word in enumerate(isen):\n",
-    "        if word not in word_counts2:\n",
+    "        if word not in word_counts:\n",
     "            continue\n",
     "        index_min = max(0, j-iwin)\n",
     "        index_max = min(len(isen), j+iwin+1)\n",
     "        index = [ii for ii in range(index_min, index_max) if ii!=j]\n",
     "        for iin in index:\n",
-    "            if isen[iin] in word_counts2:\n",
-    "                joint[(word, isen[iin])] += 1\n",
+    "            #if isen[iin] in word_counts:\n",
+    "            joint[(word, isen[iin])] += 1\n",
     "print(len(joint))\n",
     "print(joint.most_common(5))"
    ]
@@ -242,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +207,7 @@
     "index_dict = dict()\n",
     "word_dict = dict()\n",
     "ii = 0\n",
-    "for i in word_counts2:\n",
+    "for i in word_counts:\n",
     "    index_dict[i] = ii\n",
     "    word_dict[ii] = i\n",
     "    ii += 1\n",
@@ -263,7 +220,7 @@
     "for (wi,wj), count in joint.items():\n",
     "    row = index_dict[wi]\n",
     "    col = index_dict[wj]\n",
-    "    prod = word_counts2[wi]*word_counts2[wj]*len(joint)/(len(word_counts2)**2)\n",
+    "    prod = word_counts[wi]*word_counts[wj]*len(joint)/(len(word_counts)**2)\n",
     "    if count > prod:\n",
     "        value = math.log(count/prod)\n",
     "    else:\n",
@@ -278,17 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([    0,     0,     7, ..., 13886, 13888, 13890], dtype=int32),\n",
-       " array([  241,   246,  3591, ..., 13885, 12761, 10634], dtype=int32))"
+       "(array([    1,     1,     1, ..., 49813, 49813, 49814], dtype=int32),\n",
+       " array([    2,     3,    41, ...,  7178, 49812,  7178], dtype=int32))"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,10 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "def ww_sim(word, mat, topn=10):\n",
     "    indx = index_dict[word]\n",
     "    if isinstance(mat, sparse.csr_matrix):\n",
@@ -320,25 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('uncle', 1.0),\n",
-       " ('pump', 0.6556179289796744),\n",
-       " ('joel', 0.5944489410125583),\n",
-       " ('chuckled', 0.4543603147900393),\n",
-       " ('proudly', 0.34355454293437226),\n",
-       " ('fulton', 0.0),\n",
-       " ('dresses', 0.0),\n",
-       " ('shifts', 0.0),\n",
-       " ('continuum', 0.0),\n",
-       " ('superbly', 0.0)]"
+       "[('uncle', 0.9999999999999998),\n",
+       " (\"stowe's\", 0.2231759231137599),\n",
+       " ('lyman', 0.18067858267842332),\n",
+       " ('chuckled', 0.17889973368974996),\n",
+       " ('harriet', 0.17816836465527214),\n",
+       " ('morse', 0.17554553236411702),\n",
+       " (\"tom's\", 0.170997917706415),\n",
+       " ('underlay', 0.1659886873587491),\n",
+       " ('beecher', 0.14489940818841424),\n",
+       " ('shortest', 0.1431663593894243)]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,14 +307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13891, 100) (100,) (100, 13891)\n"
+      "(49815, 100) (100,) (100, 49815)\n"
      ]
     }
    ],
@@ -368,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -393,25 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('female', 0.9999999999999994),\n",
-       " ('psithyrus', 0.9995610981153056),\n",
-       " ('transports', 0.9856031460312757),\n",
-       " ('pollen', 0.9849446192789209),\n",
-       " ('procurement', 0.9838721314092996),\n",
-       " ('kills', 0.9687023620683832),\n",
-       " ('soul', 0.935564528841466),\n",
-       " ('lacks', 0.9338772281824219),\n",
-       " ('endless', 0.9277229590486692),\n",
-       " ('affectionate', 0.9163717452836537)]"
+       "[('female', 1.0000000000000002),\n",
+       " ('19-foot', 0.9980361675974996),\n",
+       " ('vocalists', 0.9965653314649788),\n",
+       " ('bumblebee', 0.9599715105301654),\n",
+       " ('parasite', 0.9287603772810248),\n",
+       " ('andrena', 0.9229003957172038),\n",
+       " ('dissenters', 0.9217030872903869),\n",
+       " ('cowbirds', 0.9069719691806799),\n",
+       " ('spate', 0.8845950933788866),\n",
+       " ('bobbed', 0.8840057140235706)]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,17 +380,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('strike', 0.9999999999999998),\n",
+       " ('shrinking', 0.9156697744209977),\n",
+       " ('heaven', 0.8904639794587017),\n",
+       " ('slang', 0.8888747215148729),\n",
+       " (\"t'ien\", 0.8875081627802461),\n",
+       " (\"smugglers'\", 0.8875081627802459),\n",
+       " ('tollgate', 0.8875081627802458),\n",
+       " ('unnerving', 0.8875081627802456),\n",
+       " ('haint', 0.8872022500803394),\n",
+       " ('piously', 0.8799832390289005)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ww_sim(\"strike\",word_vecs)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('uncle', 1.0000000000000004),\n",
+       " ('remus', 0.9993300025849559),\n",
+       " (\"elaine's\", 0.9993300025849557),\n",
+       " ('ffortescue', 0.9993300025849556),\n",
+       " (\"dan'l\", 0.9985238437324462),\n",
+       " ('dragooned', 0.993848203422079),\n",
+       " ('chuckled', 0.9910543209000767),\n",
+       " ('randolph', 0.9852530055504984),\n",
+       " ('izaak', 0.9770375458670217),\n",
+       " (\"tom's\", 0.9746761864136466)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ww_sim(\"uncle\",word_vecs)"
+   ]
   },
   {
    "cell_type": "code",
