--- a/hw3/svd_v2_loop.ipynb
+++ b/hw3/svd_v2_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "windowList = [2,5,10]\n",
-    "dimList = [100,300,1000]\n",
-    "iwin = 2\n",
-    "idim = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import nltk\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "tokenizer = RegexpTokenizer(r'\\w+')"
@@ -37,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,25 +36,12 @@
     "    def __iter__(self):\n",
     "        for line in open(self.filename, 'r'):\n",
     "            yield [word.lower() for word in tokenizer.tokenize(line)]\n",
-    "sentence = MySentences(text)"
+    "#sentence = MySentences(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count unigrams\n",
-    "from collections import Counter\n",
-    "word_counts = Counter()\n",
-    "for x in sentence:\n",
-    "    word_counts.update(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +55,31 @@
     }
    ],
    "source": [
-    "print(len(word_counts))\n",
-    "print(word_counts.most_common(5))\n",
-    "print(word_counts.most_common()[-5:])"
+    "from collections import Counter\n",
+    "# count unigrams\n",
+    "def vocab_index(sentences):\n",
+    "    word_counts = Counter()\n",
+    "    for x in sentences:\n",
+    "        word_counts.update(x)\n",
+    "    print(len(word_counts))\n",
+    "    print(word_counts.most_common(5))\n",
+    "    print(word_counts.most_common()[-5:])\n",
+    "    \n",
+    "    # generate index for words in vocabulary\n",
+    "    index_dict = dict()\n",
+    "    ii = 0\n",
+    "    for i in word_counts:\n",
+    "        index_dict[i] = ii\n",
+    "        ii += 1\n",
+    "    \n",
+    "    return index_dict\n",
+    "\n",
+    "#index_dict = vocab_index(sentence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,59 +93,48 @@
    ],
    "source": [
     "# count co-occurance as a dictionary \"joint\"\n",
-    "joint = Counter()\n",
-    "for isen in sentence:\n",
-    "    for j, word in enumerate(isen):\n",
-    "        index_min = max(0, j-iwin)\n",
-    "        index_max = min(len(isen), j+iwin+1)\n",
-    "        index = [ii for ii in range(index_min, index_max) if ii!=j]\n",
-    "        for iin in index:\n",
-    "            joint[(word, isen[iin])] += 1\n",
-    "print(len(joint))\n",
-    "print(joint.most_common(5))"
+    "def cooc_dict(sentences, iwin):\n",
+    "    joint = Counter()\n",
+    "    for isen in sentences:\n",
+    "        for j, word in enumerate(isen):\n",
+    "            index_min = max(0, j-iwin)\n",
+    "            index_max = min(len(isen), j+iwin+1)\n",
+    "            index = [ii for ii in range(index_min, index_max) if ii!=j]\n",
+    "            for iin in index:\n",
+    "                joint[(word, isen[iin])] += 1\n",
+    "    return joint\n",
+    "\n",
+    "# joint = cooc_dict(sentence, 2)\n",
+    "# print(len(joint))\n",
+    "# print(joint.most_common(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate index for words in vocabulary\n",
-    "index_dict = dict()\n",
-    "word_dict = dict()\n",
-    "ii = 0\n",
-    "for i in word_counts:\n",
-    "    index_dict[i] = ii\n",
-    "    word_dict[ii] = i\n",
-    "    ii += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# transform count joint to sparse matrix\n",
-    "row_index = []\n",
-    "col_index = []\n",
-    "values = []\n",
-    "for (wi,wj), count in joint.items():\n",
-    "    row = index_dict[wi]\n",
-    "    col = index_dict[wj]\n",
-    "    value = count\n",
-    "    row_index.append(row)\n",
-    "    col_index.append(col)\n",
-    "    values.append(value)\n",
-    "\n",
     "from scipy import sparse\n",
-    "joint_matrix = sparse.csr_matrix((values, (row_index, col_index)))"
+    "def cooc_matrix(joint_dict, index_dict):\n",
+    "    row_index = []\n",
+    "    col_index = []\n",
+    "    values = []\n",
+    "    for (wi,wj), count in joint.items():\n",
+    "        row = index_dict[wi]\n",
+    "        col = index_dict[wj]\n",
+    "        value = count\n",
+    "        row_index.append(row)\n",
+    "        col_index.append(col)\n",
+    "        values.append(value)\n",
+    "    return sparse.csr_matrix((values, (row_index, col_index)))\n",
+    "#joint_matrix = cooc_matrix(joint, index_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,65 +143,48 @@
      "text": [
       "(1, 42432)\n",
       "(42432, 1)\n",
-      "3794604\n"
-     ]
-    }
-   ],
-   "source": [
-    "# calculate the column sum, row sum and total sum of the co-occur matrix.\n",
-    "sum_a0 = joint_matrix.sum(axis=0)\n",
-    "print(np.shape(sum_a0))\n",
-    "sum_a1 = joint_matrix.sum(axis=1)\n",
-    "print(np.shape(sum_a1))\n",
-    "sum_total = joint_matrix.sum()\n",
-    "print(sum_total)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "3794604\n",
       "1468689\n"
      ]
     }
    ],
    "source": [
-    "# find the non-zero elements in the sparse matrix\n",
-    "nonzero_index = joint_matrix.nonzero()\n",
-    "num_nonzero = np.shape(nonzero_index)[1]\n",
-    "print(num_nonzero)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate values for non-zero ppmi\n",
     "import math\n",
-    "ppmi_values = []\n",
-    "for i in range(num_nonzero):\n",
-    "    row = nonzero_index[0][i]\n",
-    "    col = nonzero_index[1][i]\n",
-    "    pwc_scaled = joint_matrix[row, col]\n",
-    "    pwpc_scaled = sum_a1[row,0]*sum_a0[0,col]/sum_total\n",
-    "    if pwc_scaled > pwpc_scaled:\n",
-    "        value = math.log(pwc_scaled/pwpc_scaled)\n",
-    "    else:\n",
-    "        value = 0\n",
-    "    ppmi_values.append(value)\n",
-    "ppmi = sparse.csr_matrix((ppmi_values, nonzero_index))    "
+    "def ppmi_matrix(joint_matrix):\n",
+    "   # calculate the column sum, row sum and total sum of the co-occur matrix.\n",
+    "    sum_a0 = joint_matrix.sum(axis=0)\n",
+    "    print(np.shape(sum_a0))\n",
+    "    sum_a1 = joint_matrix.sum(axis=1)\n",
+    "    print(np.shape(sum_a1))\n",
+    "    sum_total = joint_matrix.sum()\n",
+    "    print(sum_total) \n",
+    "   \n",
+    "    # find the non-zero elements in the sparse matrix\n",
+    "    nonzero_index = joint_matrix.nonzero()\n",
+    "    num_nonzero = np.shape(nonzero_index)[1]\n",
+    "    print(num_nonzero)\n",
+    "    \n",
+    "    # calculate values for non-zero ppmi\n",
+    "    ppmi_values = []\n",
+    "    for i in range(num_nonzero):\n",
+    "        row = nonzero_index[0][i]\n",
+    "        col = nonzero_index[1][i]\n",
+    "        pwc_scaled = joint_matrix[row, col]\n",
+    "        pwpc_scaled = sum_a1[row,0]*sum_a0[0,col]/sum_total\n",
+    "        if pwc_scaled > pwpc_scaled:\n",
+    "            value = math.log(pwc_scaled/pwpc_scaled)\n",
+    "        else:\n",
+    "            value = 0\n",
+    "        ppmi_values.append(value)\n",
+    "    \n",
+    "    return sparse.csr_matrix((ppmi_values, nonzero_index)) \n",
+    "\n",
+    "#ppmi = ppmi_matrix(joint_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,67 +196,103 @@
     }
    ],
    "source": [
-    "# truncate with svd\n",
     "from scipy.sparse import linalg\n",
-    "uu,ss,vv = linalg.svds(ppmi, idim)\n",
-    "print(np.shape(uu),np.shape(ss),np.shape(vv))"
+    "# truncate with svd\n",
+    "def ppmi_svd(ppmi, idim):\n",
+    "    uu,ss,vv = linalg.svds(ppmi, idim)\n",
+    "    print(np.shape(uu),np.shape(ss),np.shape(vv)) \n",
+    "  \n",
+    "    sigma_sr = np.diag([x**0.5 for x in ss])\n",
+    "    return np.matmul(uu,sigma_sr)\n",
+    "\n",
+    "#word_vecs = ppmi_svd(ppmi, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(42432, 100)"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sigma_sr = np.diag([x**0.5 for x in ss])\n",
-    "word_vecs = np.matmul(uu,sigma_sr)\n",
-    "np.shape(word_vecs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(42432,)"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keys = list(index_dict.keys())\n",
-    "np.shape(keys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "f1 = open('./test_output.txt','w')\n",
-    "for i in range(len(keys)):\n",
-    "    f1.write(keys[i]+' '+' '.join(str(x) for x in word_vecs[i,:]))\n",
-    "    f1.write('\\r\\n')\n",
-    "f1.close()"
+    "def save_wv(word_vecs, index_dict, iwin, idim):\n",
+    "    keys = list(index_dict.keys())\n",
+    "    print(np.shape(keys))\n",
+    "    \n",
+    "    f1 = open('../../NLPdata/hw3/savedModel/wv_svd_win%d_dim%d.txt' %(iwin, idim),'w')\n",
+    "    for i in range(len(keys)):\n",
+    "        f1.write(keys[i]+' '+' '.join(str(x) for x in word_vecs[i,:]))\n",
+    "        f1.write('\\r\\n')\n",
+    "    f1.close()    \n",
+    "    \n",
+    "#save_wv(word_vecs, index_dict, 2,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 100) (100,) (100, 42432)\n",
+      "(42432,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def svd_paras(corpus, iwin, idim):\n",
+    "    index_dict = vocab_index(corpus)\n",
+    "    joint = cooc_dict(corpus, iwin)\n",
+    "    joint_matrix = cooc_matrix(joint, index_dict)\n",
+    "    ppmi = ppmi_matrix(joint_matrix)\n",
+    "    word_vecs = ppmi_svd(ppmi, idim)\n",
+    "    save_wv(word_vecs, index_dict, iwin, idim)\n",
+    "    \n",
+    "#svd_paras(sentence,3,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 100) (100,) (100, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "windowList = [2,5,10]\n",
+    "dimList = [100,300,1000]\n",
+    "\n",
+    "sentence = MySentences(text)\n",
+    "for iwin in windowList:\n",
+    "    for idim in dimList:\n",
+    "        svd_paras(sentence, iwin, idim)"
    ]
   },
   {
@@ -301,6 +301,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# following are test"
+   ]
   },
   {
    "cell_type": "code",
