--- a/hw3/svd_v2_loop.ipynb
+++ b/hw3/svd_v2_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42432\n",
-      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
-      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "# count unigrams\n",
@@ -79,18 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1468689\n",
-      "[(('of', 'the'), 21132), (('the', 'of'), 21132), (('the', 'in'), 7739), (('in', 'the'), 7739), (('to', 'the'), 6939)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# count co-occurance as a dictionary \"joint\"\n",
     "def cooc_dict(sentences, iwin):\n",
@@ -111,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 42432)\n",
-      "(42432, 1)\n",
-      "3794604\n",
-      "1468689\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "def ppmi_matrix(joint_matrix):\n",
@@ -184,17 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(42432, 100) (100,) (100, 42432)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.sparse import linalg\n",
     "# truncate with svd\n",
@@ -210,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,25 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42432\n",
-      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
-      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
-      "(1, 42432)\n",
-      "(42432, 1)\n",
-      "3794604\n",
-      "1468689\n",
-      "(42432, 100) (100,) (100, 42432)\n",
-      "(42432,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def svd_paras(corpus, iwin, idim):\n",
     "    index_dict = vocab_index(corpus)\n",
@@ -262,8 +208,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# test final win10, dim1000"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "14851962\n",
+      "4815005\n"
+     ]
+    }
+   ],
+   "source": [
+    "iwin = 10\n",
+    "idim = 1000\n",
+    "index_dict = vocab_index(sentence)\n",
+    "joint = cooc_dict(sentence, iwin)\n",
+    "joint_matrix = cooc_matrix(joint, index_dict)\n",
+    "ppmi = ppmi_matrix(joint_matrix)\n",
+    "nonzero_index = joint_matrix.nonzero()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4815005)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(nonzero_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +283,76 @@
       "(42432,)\n",
       "42432\n",
       "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
-      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n"
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 300) (300,) (300, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 1000) (1000,) (1000, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 100) (100,) (100, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 300) (300,) (300, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 1000) (1000,) (1000, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 100) (100,) (100, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 300) (300,) (300, 42432)\n",
+      "(42432,)\n",
+      "42432\n",
+      "[('the', 70003), ('of', 36473), ('and', 28935), ('to', 26247), ('a', 23502)]\n",
+      "[('perelman', 1), ('exhaling', 1), ('aviary', 1), ('boucle', 1), ('stupefying', 1)]\n",
+      "(1, 42432)\n",
+      "(42432, 1)\n",
+      "3794604\n",
+      "1468689\n",
+      "(42432, 1000) (1000,) (1000, 42432)\n",
+      "(42432,)\n"
      ]
     }
    ],
